<resources>
    <string name="app_name">RestOff</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="slide_1_title">Daily Workout</string>
    <string name="slide_1_desc">Set your daily workout routine by the help of trainer</string>
    <string name="slide_2_title">Meditation Techniques </string>
    <string name="slide_2_desc">Learn about the different meditation techniques and practice them</string>
    <string name="slide_3_title">Diet Chart</string>
    <string name="slide_3_desc">Make your diet chart by the help of health experts</string>
    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="login">Login with Restoff account</string>
    <string name="email">Enter Email</string>
    <string name="password">Enter Password</string>
    <string name="Login">Log in</string>
    <string name="forgotpassword">Forgot Password ?</string>
    <string name="Signup">New to Restoff ? Signup</string>
    <string name="policy">By loging in you agree to Restoof\'s Tearms of Service, Privacy Policy and Content Policies</string>
    <string name="registration">REGISTRATION</string>
    <string name="username">Enter User Name</string>
    <string name="singup">Sing Up</string>
    <string name="btn_forgot_password">Forgot Your Password?</string>
    <string name="btn_link_to_login">Already Registered. Login Me!</string>
    <string name="someinfo">We just need your registered Email Id to send </string>
    <string name="resetpass">Reset Passwprd</string>
    <string name="reward_provid">Rewards Provide In</string>
    <string name="restaurant">Restaurant</string>
    <string name="stationary">Stationary</string>
    <string name="beautypalour">BeautyPalour</string>
    <string name="clothshop">Cloth Shop</string>
    <string name="gym">Gym</string>
    <string name="more">More Stuff ....</string>
    <string name="search">Search</string>
    <string name="off">10% OFF</string>
    <string name="title_activity_beautyiteam_list">Beautyiteam_list</string>
    <string name="shopname">Enter Shope Name</string>
    <string name="upload">Upload</string>
    <string name="amout">Enter amount of Bill</string>
    <string name="about">Tell Us Soming About Shope for example food,cleaness etc.</string>
    <string name="billuplado">Upload bill</string>
    <string name="editprofile">Edit Profile</string>
    <string name="editphoto">Edit Photo</string>
    <string name="name">Name</string>
    <string name="email1">Email</string>
    <string name="updateprofile">Update Profile</string>
    <string name="problem">What\'s Worng ? Tell Us</string>
    <string name="quesy">Write Query here</string>
    <string name="submitquery">Submit Query</string>
    <string name="wallet">Wallet</string>
    <string name="restoffwallet">Restoff Wallet</string>
    <string name="value">Value</string>
    <string name="getvaucher">Get Voucher</string>
    <string name="recent">Recent Add</string>
    <string name="status">status:</string>
    <string name="panding">Panding</string>
    <string name="done">Done check your wallet</string>
</resources>
