<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login_Screen"
    android:background="@color/white"
    android:orientation="vertical">
    <TextView
        android:id="@+id/lable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/white"
        android:padding="10dp"
        android:fontFamily="serif"
        android:textStyle="bold|italic"
        android:background="@color/colorPrimaryDark"
        android:text="@string/Login"/>
    <TextView
        android:id="@+id/logintext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20sp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/placeholderbackground"
        android:layout_below="@+id/lable"
        android:fontFamily="sans-serif-condensed"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/email"
        android:id="@+id/login_edittext_email"
        android:layout_below="@+id/logintext"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:padding="10dp"
        android:fontFamily="sans-serif-condensed"
        android:background="@drawable/edittext_shap"



        />
    <EditText
        android:id="@+id/login_edittext_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:inputType="textPassword"
        android:hint="@string/password"

        android:layout_below="@+id/login_edittext_email"
        android:textColor="@color/black"
        android:padding="10dp"

        android:fontFamily="sans-serif-condensed"
        android:background="@drawable/edittext_shap"
        />
    <Button
        android:id="@+id/login_button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/Login"
        android:background="@drawable/button_shap"
        android:fontFamily="sans-serif-condensed"
        android:textColor="@color/white"
        android:layout_below="@+id/login_edittext_pass"
        />
    <TextView
        android:id="@+id/login_textview_forgotpass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/forgotpassword"
        android:fontFamily="sans-serif-condensed"
        android:textSize="17sp"
        android:layout_below="@+id/login_button_login"
        android:textColor="@color/colorPrimaryDark"/>
    <Button
        android:id="@+id/login_button_logup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/Signup"

        android:textColor="@color/colorPrimaryDark"
        android:background="@drawable/bodder_button"
        android:layout_below="@+id/login_textview_forgotpass"/>
    <TextView
        android:id="@+id/policy1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_gravity="center"
        android:text="@string/policy"
        android:textSize="13sp"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        />
    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:textColor="@android:color/black"
        android:layout_gravity="center"
        android:text="@string/policy"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:layout_below="@+id/policy1"
        />

</RelativeLayout>