<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android" >
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:id="@+id/cp1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="129dp"
        android:layout_marginLeft="129dp"
        android:layout_marginTop="36dp"
        android:src="@drawable/cp1"
        app:civ_circle_background_color="@color/colorPrimaryDark"
        />
    <EditText
        android:id="@+id/customer_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cp1"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:padding="10dp"
        android:hint="@string/username"
        android:background="@drawable/edittext_shap"/>
    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="7dp"
        android:layout_below="@id/customer_name"
        />
    <EditText
        android:id="@+id/customer_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/email"
        android:padding="10dp"
        android:background="@drawable/edittext_shap"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_below="@id/line"/>
    <View
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="7dp"
        android:layout_below="@id/customer_email"
        />
    <TextView
        android:id="@+id/list_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/problem"
        android:layout_marginLeft="20dp"
        android:textColor="@color/black"
        android:layout_marginTop="8dp"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_below="@id/line1"
    />
    <EditText
        android:id="@+id/customer_quey"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:hint="@string/quesy"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_below="@id/list_name"
        android:paddingLeft="5dp"
        android:background="@drawable/edittext_shap"
        />
    <View
        android:id="@+id/line4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/customer_quey"
        android:layout_marginTop="8dp"
        />

    <Button
        android:id="@+id/submit_query"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_shap"
        android:text="@string/submitquery"
        android:textColor="@color/white"
        android:layout_margin="10dp"
        android:layout_below="@id/line4"
        android:layout_marginBottom="10dp"
        />

</RelativeLayout>
</ScrollView>